# bootcamp

./: .editorconfig  .gitignore  .gitpod.Dockerfile  .gitpod.yml  1-account_generation.py  2-account_balance.py  4-account_info.py  5-asset_create.py  6-asset_optin.py  7-atomic_transaction.py  LICENSE  README.md  first_app.py
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
beginner-en/: README.md
beginner-en/session_1/: 1-generate-account.py  2-account-info.py  3-payment-transation.py  4-asset-create.py.py  5-asset-send.py  6-atomic-transfer.py
beginner-es/: README.md
beginner-es/session_1/: index.ts  package.json
beginner-es/session_2/: .algokit.toml  .copier-answers.yml  README.md  calculator.py  deploy.py  pyproject.toml
beginner-es/session_2/.algokit/generators/create_contract/smart_contracts/{{ contract_name }}/: deploy_config.py.j2
beginner-es/session_2/artifacts/: application.json  approval.teal  contract.json
beginner-es/session_2/smart_contracts/: README.md  __main__.py
beginner-es/session_2/smart_contracts/artifacts/auction/: application.json  client.py  contract.json
beginner-es/session_2/smart_contracts/auction/: contract.py  deploy_config.py
beginner-es/session_2/smart_contracts/helpers/: deploy.py
beginner-es/session_3/: .copier-answers.yml  README.md  app.py  app_test.py  deploy.py
beginner-es/session_4/: application.json  contract.json  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
intermediate-en/: README.md
intermediate-en/session_2/: .copier-answers.yml  README.md  app.py  pyproject.toml
intermediate-en/session_4/: .copier-answers.yml  app.py  deploy.py  package.json
session_1/: 1-acount_generation.py  2-account_balance.py  3-payment_transaction.py  4-account_info.py  5-asset_create.py  6-asset_optin.py  7-atomic_transaction.py  README.md
session_1/intro_to_algorand/: index.ts  (+1 more)
session_2/: app.py
session_3/: app.py  auction.py  contract.json  deploy.py  pyproject.toml  pytest.ini  test_app.py
session_4/: .copier-answers.yml  README.md  application.json  auction.py  deploy.py  package-lock.json  requirements.txt  test_auction.py
(+279 files in other folders)
